--- a/.github/workflow/ci.yaml
+++ b/.github/workflow/ci.yaml
@@ -7,7 +7,7 @@ on:
       tfpath:
         description: 'TF File Path'     
         required: false
-        default: 'examples/complete/'
+        default: 'terraform/'
   push:
     branches: [ main ]
   pull_request:
@@ -51,6 +51,6 @@ jobs:
     - name: Terraform Destroy
       run: |
         echo "** Running Terraform Destroy**"
-        terraform plan -destroy
+        # terraform plan -destroy
 #        terraform destroy -auto-approve
       working-directory: ${{ github.event.inputs.tfpath }}
